Just the text is now aligned to center. I would die if wouldn't have fixed it now

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -136,6 +136,7 @@ main {
   align-content: space-between;
   justify-items: center;
   align-items: center;
+	text-align: center;
   width: 100%;
   height: 100%;
   opacity: 0;
